--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,9 @@ dependencies {
 
     // JUnit 플랫폼 런처 의존성 (JUnit 테스트를 실행할 수 있도록 지원)
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Swagger
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0"
 }
 
 tasks.named('test') {
